index.scss
body,
figure {
  margin: 0;
}

nav,
section,
footer,
figure,
figcaption {
  display: block;
}

h2,
h3,
h4,
p,
a,
span,
figure {
  font-family: Raleway, Arial, Helvetica, sans-serif;
  text-align: center;
  margin: 0 auto;
}

h2 {
  color: #ff6347;
  font-weight: bold;
  font-size: 36px;
  line-height: 43px;
  padding-top: 46px;
}

h3 {
  color: #062d56;
  font-weight: bold;
  font-size: 24px;
  line-height: 29px;
  padding-top: 42px;
}

h4 {
  color: #18132c;
  font-weight: 500;
  font-size: 21px;
  letter-spacing: 0.4px;
  line-height: 30px;
  width: 180px;
}

p {
  color: #062d56;
  font-size: 17px;
  letter-spacing: 0.53px;
  line-height: 25px;
  padding-top: 24px;
  width: 742px;
}

input,
button {
  border: 0px solid;
  outline: none;
}

input {
  color: #062d56;
  font-family: Raleway;
}

button,
span.button {
  display: inline-block;
  background-color: #07b4b9;
  color: white;
  font-family: Raleway;
  text-align: center;
  cursor: pointer;
}

nav {
  background-color: #fbd561;
  width: 100%;
  height: 91px;
  border-bottom: 1px solid white;
  position: fixed;
  z-index: 10;

  .logo {
    float: left;
    padding: 22px 38px;
  }

  .sign-up {
    float: right;
    padding-top: 33px;

    span {
      font-family: Raleway, Arial, Helvetica, sans-serif;
      font-weight: normal;
      color: #062d56;
      font-size: 12.75px;
      letter-spacing: 0.4px;
      line-height: 18.75px;
      width: 125px;
      text-align: center;
      margin-right: 11px;
    }

    input,
    button {
      border-radius: 15px;
      height: 30px;
    }

    input {
      background-color: white;
      width: 212px;
      margin-right: 11px;
      padding: 0 12px;
      font-size: 12.75px;
      letter-spacing: 0.53px;
    }

    button {
      width: 95px;
      font-size: 12.75px;
      letter-spacing: 0.4px;
      line-height: 30px;
    }
  }

  .github {
    float: right;
    width: 90px;
    height: 30px;
    margin: 33px 32px;
  }
}

.github-button {
  visibility: hidden;
}

#introduction {
  background-image: linear-gradient(180deg, #fbd561 0%, #efa647 100%);
  height: 767px;
  padding-top: 91px;
  position: relative;
  z-index: 1;

  figure.section {
    width: 900px;
    height: 288px;
    margin: 70px auto;

    .feature {
      float: left;
      width: 300px;

      p {
        width: 80%;
        padding-top: 12px;
      }

      h4 {
        padding-top: 12px;
      }
    }

    .doodle {
      border: 4px solid white;
      border-radius: 100%;
      width: 163px;
      height: 163px;
      position: relative;
      margin: 0 auto;
      background: url(../img/bullets.svg);
      background-size: 400px 400px;
      background-clip: content-box;

      &:before {
        content: "";
        display: block;
        position: absolute;
        top: 0px;
        left: 0px;
        right: 0px;
        bottom: 0px;
        border: 7px solid #f8b650;
        border-radius: 100%;
      }

      &.control {
        background-position: 410px 235px;
      }

      &.privacy {
        background-position: 185px 350px;
      }

      &.convenience {
        background-position: 305px 160px;
      }
    }
  }
}

#problem {
  background-color: #f8f8f6;
  height: 767px;

  .explained {
    display: none;
  }

  #problem-explained {
    display: none;

    &:target {
      ~ .intro {
        display: none;
      }

      ~ .explained {
        display: block;
      }

      ~ .pagination .page.intro {
        background-color: #cdcdcd;
      }

      ~ .pagination .page.explained {
        background-color: #3e96fc;
      }
    }
  }

  .pagination {
    width: 44px;
    height: 12px;
    margin: 0 auto;

    .page {
      display: block;
      float: left;
      background-color: #cdcdcd;
      border-radius: 100%;
      width: 14px;
      height: 14px;

      &.intro {
        margin-right: 16px;
        background-color: #3e96fc;
      }
    }
  }

  .problem {
    height: 584px;
  }

  img.communication {
    display: block;
    margin: 30px auto 25px auto;
  }

  .communication {
    width: 642px;
    height: 148px;
    margin: 40px auto 15px auto;

    figure {
      float: left;
    }

    img {
      display: block;
      float: left;
    }

    figure.arrow {
      width: 134px;
      height: 22px;
      background: url(../img/arrow-big.svg) no-repeat center center;

      &.left {
        transform: rotate(180deg);
      }
    }

    figure.party {
      position: relative;
      z-index: 2;
    }

    figure.encrypt {
      width: 54px;
      height: 54px;
      background: no-repeat center center;
      margin-top: 23px;

      &.circle {
        background-color: white;
        border: 1px solid #cdcdcd;
        border-radius: 100%;
        position: relative;
        z-index: 1;

        &.key {
          background-image: url(../img/key.svg);
        }
      }

      &.msg.key {
        background-image: url(../img/key.svg), url(../img/msg1.svg);
      }

      &.msg.lock {
        background-image: url(../img/lock.svg), url(../img/msg1.svg);
      }

      &.left {
        margin-left: -20px;
      }

      &.right {
        margin-right: -20px;
      }
    }

    .arrow {
      margin: 40px 10px;
    }

    .server {
      margin-top: 25px;
    }
  }

  h2 {
    padding-top: 70px;
  }
}

#solution {
  background-color: #062d56;
  height: 382px;

  h3 {
    padding-top: 72px;
  }

  p {
    color: white;
    padding-top: 12px;

    &:first-of-type {
      padding-top: 53px;
    }
  }
}

#example {
  background-image: url(../img/bg.svg),
    linear-gradient(180deg, #fbd561 0%, #efa647 100%);
  background-size: 800px 800px, auto;
  height: 987px;

  div.all-users {
    position: relative;
    width: 1000px;
    margin: 50px auto;
  }

  div.user {
    position: absolute;

    h3 {
      text-align: left;
      padding: 0 0 9px 12px;
    }

    .terminal {
      position: relative;
      background-color: black;
      border: 1px solid white;
      border-radius: 10px;
      opacity: 0.8;
      box-sizing: border-box;
      padding: 10px 10px;
      color: white;

      &:before {
        content: "";
        display: block;
        position: absolute;
        top: 0px;
        left: 0px;
        width: 100%;
        height: 20px;
        background: white url(../img/circle.svg) no-repeat 8px center;
        border-radius: 10px 10px 0 0;
        opacity: 0.4;
      }

      .input,
      .display {
        font-family: Menlo, "Lucida Console", Monaco, monospace;
        font-size: 14px;
        letter-spacing: 0.27px;
        line-height: 28px;
        position: absolute;
        left: 10px;
        right: 10px;
      }

      .input {
        color: #efa647;
        display: block;
        height: 30px;
        bottom: 0;
      }

      .display {
        color: #fbd561;
        text-align: left;
        height: calc(100%-30px);
        top: 20px;
        bottom: 30px;

        div.sent {
          color: #efa647;
          margin-left: 120px;
        }

        span {
          font-family: Menlo, Monaco, "Lucida Console", monospace;
          text-align: left;
          margin: 0 0;

          &.user,
          &.link {
            color: #3e96fc;
          }

          &.group {
            color: #07b4b9;
          }
        }
      }
    }

    &.alice {
      left: 0;
      top: 30px;

      .terminal {
        width: 503px;
        height: 362px;
      }
    }

    &.bob {
      left: 528px;
      top: 0px;

      .terminal {
        width: 492px;
        height: 282px;
      }
    }

    &.tom {
      left: 397px;
      top: 320px;

      h3 {
        color: white;
      }

      .terminal {
        width: 492px;
        height: 254px;
      }
    }
  }
}

#connection {
  background-color: #f8f8f6;
  height: 924px;

  figure.section {
    width: 924px;
    margin: 111px auto;

    .arrow {
      display: block;
      float: left;
      width: 50px;
      margin: 167px 4px;
    }

    .party {
      margin: 60px auto;
    }
  }

  figure.conn-stage {
    float: left;
  }

  figure.device {
    background-image: url(../img/iphone.png);
    width: 185px;
    height: 370px;
  }
}

#messaging {
  background-image: linear-gradient(180deg, #fbd561 0%, #efa647 100%);
  height: 625px;

  img {
    display: block;
    margin: 65px auto;
  }
}

#chat {
  background-color: #f8f8f6;
  height: 683px;

  figure.section {
    width: 740px;
    margin-top: 57px;

    img {
      display: block;
      float: left;
      margin-right: 6px;
    }

    .arrow {
      margin-top: 14px;
      margin-right: 6px;

      &.right,
      &.left {
        float: left;
        background: url(../img/arrow-small.svg) no-repeat center center;
        width: 28px;
        height: 18px;
      }

      &.left {
        transform: rotate(180deg);
      }

      &.top,
      &.bottom {
        float: left;
        margin-right: 6px;
        background: url(../img/arrow-diag.svg) no-repeat center center;
        width: 37px;
        height: 37px;
      }

      &.top {
        margin: 55px 9px 0 9px;

        &.down {
          transform: rotate(90deg);
        }
      }

      &.bottom {
        margin: -30px 9px 0 9px;

        &.up {
          transform: rotate(-90deg);
        }

        &.down {
          transform: rotate(180deg);
        }
      }
    }

    .party {
      float: left;
      margin: 80px 9px;
    }

    .chat {
      float: left;
    }

    .bob-alice {
      margin-top: 200px;
    }
  }
}

#simplex {
  background-color: white;
  height: 435px;

  h3 {
    padding-top: 63px;
  }

  p {
    width: 455px;
  }

  section.half {
    width: 50%;
    float: left;
  }

  input,
  button,
  span.button {
    border-radius: 20px;
    height: 40px;
  }

  .sign-up {
    width: 430px;
    margin: 22px auto;

    input {
      background-color: #efefea;
      width: 283px;
      margin-right: 10px;
      padding: 0 15px;
      font-size: 17px;
      letter-spacing: 0.53px;
    }

    button {
      width: 127px;
      font-size: 17px;
      letter-spacing: 0.53px;
    }
  }

  #contacts {
    width: 320px;
    margin: 22px auto;

    p {
      text-align: left;
    }

    span.button {
      width: 100px;
      font-size: 17px;
      line-height: 40px;
    }

    a {
      color: #062d56;
      font-size: 17px;
      letter-spacing: 0.53px;
      line-height: 25px;
      text-decoration: none;
    }
  }
}

footer {
  background-color: #f8f8f6;
  height: 197px;
  position: relative;

  .logo {
    position: absolute;
    top: 18px;
    left: 38px;
  }

  .copyright {
    padding-top: 25px;
  }

  .github {
    position: absolute;
    top: 25px;
    right: 38px;
  }
}

/* Alice and Bob figures */

figure.party {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  width: 102px;
  height: 139px;
  background: no-repeat center top;

  &.small {
    width: 90px;
    height: 118px;
    background-size: 88px 88px;
  }

  &.alice {
    background-image: url(../img/alice.svg);
  }

  &.bob {
    background-image: url(../img/bob.svg);
  }
}

@font-face {
  font-family: Raleway;
  src: url(./Raleway-Regular.woff2);
  font-weight: normal;
}

@font-face {
  font-family: Raleway;
  src: url(./Raleway-Medium.woff2);
  font-weight: 500;
}

@font-face {
  font-family: Raleway;
  src: url(./Raleway-Bold.woff2);
  font-weight: bold;
}

